# universal-docs-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/universal_docs_mcp/: __init__.py  cache.py  docs_fetcher.py  registries.py  server.py
tests/: test_registries.py
